<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registrar"
        android:background="@color/colorPrimaryDark">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="663dp">

                <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="142dp"
                        android:layout_height="137dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.942"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.033"
                        app:srcCompat="@drawable/regis" />

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/concert_one"
                        android:text="@string/app_Button_Registrar"
                        android:textColor="#FFFFFF"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView"
                        app:layout_constraintHorizontal_bias="0.445"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                <EditText
                        android:id="@+id/txt_Name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="212dp"
                        android:layout_marginEnd="16dp"
                        android:backgroundTint="#FFFFFF"
                        android:drawableTint="#FFFFFF"
                        android:ems="10"
                        android:fontFamily="@font/concert_one"
                        android:hint="@string/app_Txt_Name"
                        android:inputType="textPersonName"
                        android:textColor="#96C73E"
                        android:textColorHighlight="#2196F3"
                        android:textColorHint="#A9ACA7"
                        android:textColorLink="#2196F3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <EditText
                        android:id="@+id/txt_LastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:backgroundTint="#FFFFFF"
                        android:drawableTint="#FFFFFF"
                        android:ems="10"
                        android:fontFamily="@font/concert_one"
                        android:foregroundTint="#FFFFFF"
                        android:hint="@string/app_Txt_LastName"
                        android:inputType="textPersonName"
                        android:textColor="#96C73E"
                        android:textColorHighlight="#2196F3"
                        android:textColorHint="#A9ACA7"
                        android:textColorLink="#2196F3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_Name" />

                <EditText
                        android:id="@+id/txt_Cedula"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:backgroundTint="#FFFFFF"
                        android:drawableTint="#FFFFFF"
                        android:ems="10"
                        android:fontFamily="@font/concert_one"
                        android:foregroundTint="#FFFFFF"
                        android:hint="@string/app_Txt_Cedula"
                        android:inputType="number|textPersonName"
                        android:textColor="#96C73E"
                        android:textColorHighlight="#2196F3"
                        android:textColorHint="#A9ACA7"
                        android:textColorLink="#2196F3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.505"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_LastName" />

                <EditText
                        android:id="@+id/txt_Email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:backgroundTint="#FFFFFF"
                        android:drawableTint="#FFFFFF"
                        android:ems="10"
                        android:fontFamily="@font/concert_one"
                        android:foregroundTint="#FFFFFF"
                        android:hint="@string/app_Button_inputEmail"
                        android:inputType="textEmailAddress"
                        android:shadowColor="#FFFFFF"
                        android:textColor="#96C73E"
                        android:textColorHint="#A9ACA7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.505"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_Cedula" />

                <EditText
                        android:id="@+id/txt_Password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:backgroundTint="#FFFFFF"
                        android:ems="10"
                        android:fontFamily="@font/concert_one"
                        android:hint="@string/app_Txt_Password"
                        android:inputType="numberPassword"
                        android:textColor="#96C73E"
                        android:textColorHint="#A9ACA7"
                        app:layout_constraintBottom_toTopOf="@+id/button_Siguente"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_Email"
                        app:layout_constraintVertical_bias="0.0" />

                <Button
                        android:id="@+id/button_Siguente"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:background="@drawable/roundbutton"
                        android:fontFamily="@font/concert_one"
                        android:text="@string/app_Button_Siguiente"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.504"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="@string/app_Button_Siguiente" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
